--- a/eduction-frontend/app/globals.css
+++ b/eduction-frontend/app/globals.css
@@ -2,9 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
+  user-select: none;
+}
+
+/* carousel */
+
+/* .carousel {
+  height: 50%;
+} */
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination-bullet-active {
+  width: 35px !important;
+  border-radius: 5px !important;
+  background-color: #144F58 !important;
 }
