--- a/eduction-frontend/app/globals.css
+++ b/eduction-frontend/app/globals.css
@@ -12,11 +12,6 @@ body {
 }
 
 /* carousel */
-
-/* .carousel {
-  height: 50%;
-} */
-
 .swiper {
   width: 100%;
   height: 100%;
@@ -25,9 +20,7 @@ body {
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
+  background: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,8 +33,18 @@ body {
   object-fit: cover;
 }
 
-.swiper-pagination-bullet-active {
+.course .swiper-pagination-bullet-active {
   width: 35px !important;
   border-radius: 5px !important;
   background-color: #144F58 !important;
+}
+
+.interview .swiper-pagination-bullet-active {
+  width: 35px !important;
+  border-radius: 5px !important;
+  background-color: #fff !important;
+}
+
+.interview .swiper-pagination-bullet {
+  background-color: #fff !important;
 }
