--- a/eduction-frontend/app/globals.css
+++ b/eduction-frontend/app/globals.css
@@ -18,19 +18,13 @@ body {
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex !important;
+  justify-content: space-evenly !important;
+  align-items: center !important;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.swiper-pagination {
+  bottom: 0px !important;
 }
 
 .course .swiper-pagination-bullet-active {
