--- a/eduction-frontend/app/styles/home.module.css
+++ b/eduction-frontend/app/styles/home.module.css
@@ -36,7 +36,7 @@
 }
 
 .heartbtn {
-    background-color: rgba(255,255,255,0.8);
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .coursecard {
@@ -48,7 +48,7 @@
 
 .coursecard_content {
     backdrop-filter: blur(5px);
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .interviewcard {
@@ -60,7 +60,5 @@
 
 .interviewcard_content {
     backdrop-filter: blur(5px);
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255, 255, 255, 0.1);
 }
-
-
